--- a/scss/partials/helpers/_variables.scss
+++ b/scss/partials/helpers/_variables.scss
@@ -27,6 +27,11 @@ $box-sizing: border-box;
 
 //Media query
 $mobile: '(min-width:360px)';
+$mobile-: '(min-width:360px)';
 $tablet: '(min-width:768px)';
 $desktop: '(min-width:1024px)';
 $big-desktop: '(min-width:1400px)';
+
+
+$orientation-landscape: "(orientation:landscape)";
+$orientation-portrait: "(orientation:portrait)";
