--- a/scss/partials/layout/_header.scss
+++ b/scss/partials/layout/_header.scss
@@ -29,17 +29,42 @@
         @include screen(mobile) {
             font-size: $font-size-s;
             margin-top: 30%;
+
+            @include orientation(landscape) {
+                width: 50%;
+                margin-top: 13%;
+                font-size: $font-size-xs;
+            }
         }
 
         @include screen(tablet) {
             font-size: $font-size-l;
             margin-top: 20%;
+
+            @include orientation(landscape) {
+                width: 50%;
+                margin-top: 10%;
+                font-size: $font-size-s;
+            }
         }
 
         @include screen(desktop) {
             font-size: $font-size-xl;
             line-height: 1.2;
             margin-top: 25%;
+
+            @include orientation(landscape) {
+                width: 50%;
+                margin-top: 25%;
+                font-size: $font-size-l;
+            }
+        }
+
+
+        @include rwd(1365) {
+            @include orientation(landscape) {
+                font-size: $font-size-xl;
+            }
         }
 
         @include screen(big-desktop) {
@@ -62,15 +87,33 @@
         @include screen(mobile) {
             font-size: $font-size-xs;
             margin-top: 5px;
+
+            @include orientation(landscape) {
+                font-size: $font-size-xxs;
+            }
         }
 
         @include screen(tablet) {
             font-size: $font-size-m;
             margin-top: 10px;
+
+            @include orientation(landscape) {
+                font-size: $font-size-xs;
+            }
         }
 
         @include screen(desktop) {
             font-size: $font-size-l;
+
+            @include orientation(landscape) {
+                font-size: $font-size-m;
+            }
+        }
+
+        @include rwd(1365) {
+            @include orientation(landscape) {
+                font-size: $font-size-l;
+            }
         }
 
         @include screen(big-desktop) {
@@ -99,6 +142,14 @@
         content: "";
         position: absolute;
         border: 1px solid $color-white;
+
+
+        @include screen(mobile) {
+            @include orientation(landscape) {
+                display: none;
+            }
+        }
+
     }
 
     &::before {
@@ -122,6 +173,12 @@
         @include screen(desktop) {
             width: 400px;
             height: 730px;
+
+            @include orientation(landscape) {
+                width: 390px;
+                height: 320px;
+                top: 70%;
+            }
         }
 
         @include screen(big-desktop) {
@@ -159,9 +216,14 @@
             width: 95px;
             height: 95px;
 
+            @include orientation(landscape) {
+
+                right: 30%;
+            }
         }
 
         @include screen(big-desktop) {
+            display: block;
             width: 500px;
             height: 500px;
             right: 47%;
@@ -202,21 +264,47 @@
     }
 
 
+
+
     @include screen(mobile) {
         height: 400px;
         width: 370px;
         right: -12%;
+
+        @include orientation(landscape) {
+            height: 295px;
+            width: 290px;
+            right: 1%;
+        }
     }
 
     @include screen(tablet) {
         height: 600px;
         width: 570px;
         right: -7%;
+
+
+        @include orientation(landscape) {
+            height: 320px;
+            width: 460px;
+        }
     }
 
     @include screen(desktop) {
         height: 800px;
         width: 770px;
+
+        @include orientation(landscape) {
+            height: 612px;
+            width: 670px;
+        }
+    }
+
+    @include rwd(1365) {
+        @include orientation(landscape) {
+            height: 820px;
+            width: 855px;
+        }
     }
 
     @include screen(big-desktop) {
