--- a/scss/partials/layout/_services.scss
+++ b/scss/partials/layout/_services.scss
@@ -209,15 +209,15 @@
         }
 
         &:nth-child(1) {
-            background-image: url(../img/service-picture1.jpg);
+            background-image: url(../img/service-picture1.webp)
         }
 
         &:nth-child(2) {
-            background-image: url(../img/service-picture2.jpg);
+            background-image: url(../img/service-picture2.webp);
         }
 
         &:nth-child(3) {
-            background-image: url(../img/service-picture3.jpg);
+            background-image: url(../img/service-picture3.webp);
         }
     }
 
