--- a/scss/partials/helpers/_animations.scss
+++ b/scss/partials/helpers/_animations.scss
@@ -143,3 +143,15 @@
         -o-transform: rotate(-45deg);
     }
 }
+
+@keyframes pulse {
+    from {
+        opacity: 1;
+        transform: scale(1);
+    }
+
+    to {
+        opacity: .25;
+        transform: scale(.75);
+    }
+}
