--- a/scss/partials/layout/_preloader.scss
+++ b/scss/partials/layout/_preloader.scss
@@ -5,29 +5,35 @@
     @include flexbox;
     align-items: center;
     justify-content: space-around;
-    background: rgb(44, 158, 255);
-    background: radial-gradient(circle, rgba(44, 158, 255, 1) 0%, rgba(124, 190, 212, 1) 0%, rgba(88, 101, 255, 1) 100%);
+    background-color: #1d2630;
     z-index: 1000;
 
-    &__text {
-        color: $color-white;
-        font-size: $font-size-s;
-        transform: translateY(-600%);
-        -webkit-transform: translateY(-600%);
-        -moz-transform: translateY(-600%);
-        -ms-transform: translateY(-600%);
-        -o-transform: translateY(-600%);
+    &__container {
+        width: 120px;
+        @include flexbox;
+        justify-content: space-between;
+        align-items: center;
     }
 
-    &__image {
-        height: 200px;
-        width: 100px;
-        position: absolute;
-        background: url(../img/preloader.png);
-        background-position: center;
-        background-size: cover;
-        animation: sweep 1s infinite;
-        -webkit-animation: sweep 1s infinite;
-        transform-origin: top;
+    &__dot {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background-color: $color-primary;
+
+        &:nth-child(1) {
+            animation: pulse .4s ease 0s infinite alternate;
+            -webkit-animation: pulse .4s ease 0s infinite alternate;
+        }
+
+        &:nth-child(2) {
+            animation: pulse .4s ease .2s infinite alternate;
+            -webkit-animation: pulse .4s ease .2s infinite alternate;
+        }
+
+        &:nth-child(3) {
+            animation: pulse .4s ease .4s infinite alternate;
+            -webkit-animation: pulse .4s ease .4s infinite alternate;
+        }
     }
 }
